--- a/vercel.json
+++ b/vercel.json
@@ -5,13 +5,6 @@
             "src": "zadechatapi/wsgi.py",
             "use": "@vercel/python",
             "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-        },
-        {
-            "src": "build_files.sh",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "staticfiles_build"
-            }
         }
     ],
     "routes": [
@@ -23,5 +16,6 @@
             "src": "/(.*)",
             "dest": "zadechatapi/wsgi.py"
         }
-    ]
+    ],
+    "buildCommand": "curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && python3.9 get-pip.py && python3.9 -m pip install -r requirements.txt && python3.9 manage.py collectstatic --noinput --clear"
 }
