--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,31 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "zadechatapi/wsgi.py",
-            "use": "@vercel/python",
-            "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+      {
+        "src": "zadechatapi/wsgi.py",
+        "use": "@vercel/python",
+        "config": {
+          "maxLambdaSize": "15mb",
+          "runtime": "python3.9"
         }
+      },
+      {
+        "src": "build_files.sh",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "staticfiles_build"
+        }
+      }
     ],
     "routes": [
-        {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "zadechatapi/wsgi.py"
-        }
-    ],
-    "buildCommand": "curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && python3.9 get-pip.py && python3.9 -m pip install -r requirements.txt && python3.9 manage.py collectstatic --noinput --clear"
-}
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "zadechatapi/wsgi.py"
+      }
+    ]
+  }
+  
